Img slider home page

--- a/V1.0/index.html
+++ b/V1.0/index.html
@@ -144,8 +144,8 @@
                 <div class="swiper-slide swiper-slide-block">
                   <div class="item">
                     <div class="why-box" data-aos="zoom-out" data-aos-delay="200">
-                      <h4 class="white">Struggling with Sexually Transmitted Infections?</h4>
-                      <div> Restore your confidence with reliable screening and treatment of Sexually Transmitted Infections (STIs)<br></div>
+                      <h4 class="white">Struggling with Sexually Transmitted Infections and don't know where to get help?</h4>
+                      <div> Restore your confidence with our safe and reliable screenings and treatments for all Sexually Transmitted Diseases.<br></div>
                       <p></p>
                       <div class="text-center">
                         <a class="more-btn d-sm-block" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
@@ -157,8 +157,8 @@
                 <div class="swiper-slide swiper-slide-block">
                   <div class="item">
                     <div class="why-box" data-aos="zoom-out" data-aos-delay="200">
-                      <h4 class="white">Another</h4>
-                      <div> Restore your confidence with reliable screening and treatment of Sexually Transmitted Infections (STIs)<br></div>
+                      <h4 class="white">Suffering from Painful menstrual periods due to hormone imbalance or infection?</h4>
+                      <div> You don't have to suffer in silence...<br></div>
                       <p></p>
                       <div class="text-center">
                         <a class="more-btn d-sm-block" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
@@ -170,8 +170,8 @@
                 <div class="swiper-slide swiper-slide-block">
                   <div class="item">
                     <div class="why-box" data-aos="zoom-out" data-aos-delay="200">
-                      <h4 class="white">Continue</h4>
-                      <div> Restore your confidence with reliable screening and treatment of Sexually Transmitted Infections (STIs)<br></div>
+                      <h4 class="white">Are you afraid of unwanted pregnancy?</h4>
+                      <div> Birth control is for every woman who is sexually active. Speak to us today to help you pick one that can suit your body and life style.<br></div>
                       <p></p>
                       <div class="text-center">
                         <a class="more-btn d-sm-block" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
@@ -183,8 +183,8 @@
                 <div class="swiper-slide swiper-slide-block">
                   <div class="item">
                     <div class="why-box" data-aos="zoom-out" data-aos-delay="200">
-                      <h4 class="white">Done</h4>
-                      <div> Restore your confidence with reliable screening and treatment of Sexually Transmitted Infections (STIs)<br></div>
+                      <h4 class="white">Your safe and private place for everything sexual and reproductive health.</h4>
+                      <div> We listen we don't judge. <br></div>
                       <p></p>
                       <div class="text-center">
                         <a class="more-btn d-sm-block" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
@@ -241,76 +241,6 @@
 
     </section><!-- /Hero Section -->
 
-    <!-- Slider Section -->
-    <section id="slider" class="slider section light-background">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Our Clients</h2>
-      </div><!-- End Section Title -->
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="swiper init-swiper">
-
-          <script type="application/json" class="swiper-config">
-            {
-              "loop": true,
-              "speed": 600,
-              "autoplay": {
-                "delay": 5000
-              },
-              "slidesPerView": "auto",
-              "centeredSlides": true,
-              "pagination": {
-                "el": ".swiper-pagination",
-                "type": "bullets",
-                "clickable": true
-              },
-              "navigation": {
-                "nextEl": ".swiper-button-next",
-                "prevEl": ".swiper-button-prev"
-              }
-            }
-          </script>
-
-          <div class="swiper-wrapper">
-
-            <div class="swiper-slide" >
-              <div class="content">
-                <img src="assets/img/clients/clients_1.jpeg" width="75%" height="75%" alt="Client 1">
-              </div>
-            </div>
-
-            <div class="swiper-slide" >
-              <div class="content">
-                <img src="assets/img/clients/clients_2.jpeg" width="75%" height="75%" alt="Client 1">
-              </div>
-            </div>
-
-            <div class="swiper-slide" >
-              <div class="content">
-                <img src="assets/img/clients/clients_3.jpeg" width="75%" height="75%" alt="Client 1">
-              </div>
-            </div>
-
-            <div class="swiper-slide" >
-              <div class="content">
-                <img src="assets/img/clients/clients_4.jpeg" width="75%" height="75%" alt="Client 1">
-              </div>
-            </div>
-          </div>
-
-          <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
-
-          <div class="swiper-pagination"></div>
-        </div>
-
-      </div>
-
-    </section><!-- /Slider Section -->
-
     <!-- Call To Action 3 Section -->
     <section id="call-to-action-3" class="call-to-action-3 section">
 
@@ -325,9 +255,9 @@
               You experience discomfort with common symptoms like itching, sores and bumps around your private area. 
               You may even experience pain while urinating or during sexual intercourse. (Note that some STIs don’t show any physical symptoms).<br><br>
               This can be embarrassing. You lose your self-esteem, become withdrawn from your partner(s), family, friends and the society. 
-              You feel imprisoned. And this may gradually lead you to a state of depression.<br><br>
+              You feel imprisoned and this may gradually lead you to a state of depression.<br><br>
               Worse still, is that you don’t know where to access reliable and professional treatment without being judged.<br><br>
-              The truth is… You don’t have to suffer in silence. You deserve more.<br>
+              The truth is… You don’t have to suffer in silence, you deserve more.<br>
             </p>
             <!--<a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>-->
             <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
@@ -335,7 +265,7 @@
 
           <div class="col-lg-4 col-md-6 order-first order-md-last d-flex align-items-center">
             <div class="img">
-              <img src="assets/img/cta_0.jpg" alt="" class="img-fluid">
+              <img src="assets/img/cta_0.png" alt="" class="img-fluid">
             </div>
           </div>
 
