--- a/V1.0/index.html
+++ b/V1.0/index.html
@@ -101,7 +101,11 @@
 
         <div class="welcome position-relative" data-aos="fade-down" data-aos-delay="100">
           <H2 class="heading-font">Welcome To Pink Clinic</H2>
-          <p><span>Safe and Private Sexual Health Care Services.</span></p>
+          <p>
+            <span>
+              Safe and Private <br> Sexual Health Care Services.
+            </span>
+          </p>
         </div><!-- End Welcome -->
 
         <div class="content row gy-4">
