--- a/V1.0/services.html
+++ b/V1.0/services.html
@@ -104,7 +104,6 @@
               <p>
                 Pink Clinic is a sexual health clinic that provides complete private and confidential services on every aspect of your sex and reproductive health, 
                 offering comprehensive care for your sexual health. 
-                Our expert team provides services for:
               </p>
               <!-- 
               <ul>
@@ -184,7 +183,7 @@
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="100">
               <div class="feature-box text-center">
-                <h4>Fertility screening and treatment</h4>
+                <h4>Fertility Screening and Treatment</h4>
               </div>
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="100">
@@ -221,7 +220,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Pricing</h2>
+        
         <p>Our STI screening is comprehensive, making sure nothing is left out.  
           There are several sexual and non-sexually transmitted infections,  
           most of them usually would show the same symptoms or no symptom at all. 
@@ -254,6 +253,7 @@
                   <li><i class="bi bi-check-circle-fill"></i> Chlamydia</li>
                   <li><i class="bi bi-check-circle-fill"></i> Urine Culture/Analysis</li>
                   <li><i class="bi bi-check-circle-fill"></i> High Vaginal/Urethral Swab</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Cervical Cancer Screening</li>
                 </ul>
               </div>
               <div class="plan-cta">
